--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git stats</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GitSpy</title>
+  <link rel="stylesheet" href="style.css">
+ 
 </head>
 <body>
+  <h1 class="app-title">GitSpy</h1>
+  <form>
+    <input placeholder="Enter Username" id="username" type="text" />
+    <button id="submit" type="submit">Search</button>
+  </form>
 
-    <form>
-         <input type="text" id="username">
-    <button>submit</button>
-    </form>
-    <div id="followers"></div>
-    <img id="dp" src="" alt="Profile Picture" width="150" />
+  <div id="followers"></div>
 
-   
-
-
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
