--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </form>
 
   <div id="followers"></div>
-
+<p>Made by <strong>Dheeraj</strong>  🚀
   <script src="script.js"></script>
 </body>
 </html>
