--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1 class="app-title">GitSpy</h1>
   <form>
-    <input placeholder="Enter Username" id="username" type="text" />
+    <input placeholder="Enter GitHub Username" id="username" type="text" />
     <button id="submit" type="submit">Search</button>
   </form>
 
