--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GitSpy</title>
+  <title>GitPeek</title>
   <link rel="stylesheet" href="style.css">
  
 </head>
 <body>
-  <h1 class="app-title">GitSpy</h1>
+  <h1 class="app-title">GitPeek</h1>
   <form>
     <input placeholder="Enter GitHub Username" id="username" type="text" />
     <button id="submit" type="submit">Search</button>
